POWR-494 Fix bash script error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,41 +110,41 @@ behat_tests: &behat_tests
             # Wake up the DEV site and must wait for 30s
             terminus env:wake portlandor.dev && sleep 30s
             # try to run drush cim
-            $result=0
+            result=0
             for i in {1..12};
             do
               terminus remote:drush portlandor.dev -- cim -y
-              $result=$?
+              result=$?
               if [ "$result" = "0" ]; then break; fi
               sleep 10; 
             done
             if (($result > 0)); then exit 1; fi
             # try drush updb
-            $result=0
+            result=0
             for i in {1..12};
             do
               terminus remote:drush portlandor.dev -- -y updb
-              $result=$?
+              result=$?
               if [ "$result" = "0" ]; then break; fi
               sleep 10; 
             done
             if (($result > 0)); then exit 1; fi
             # try drush entup
-            $result=0
+            result=0
             for i in {1..12}; 
             do
               terminus remote:drush portlandor.dev -- -y entup
-              $result=$?
+              result=$?
               if [ "$result" = "0" ]; then break; fi
               sleep 10; 
             done
             if (($result > 0)); then exit 1; fi
             # try drush cr
-            $result=0
+            result=0
             for i in {1..12}; 
             do
               terminus remote:drush portlandor.dev -- cr
-              $result=$?
+              result=$?
               if [ "$result" = "0" ]; then break; fi
               sleep 10; 
             done
@@ -200,42 +200,42 @@ behat_tests: &behat_tests
             # Clear cache. Import config files
 
             # try to run drush cim
-            $result=0
+            result=0
             for i in {1..6}; 
             do
               terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
-              $result=$?
+              result=$?
               if [ "$result" = "0" ]; then break; fi
               sleep 10; 
             done
             if (($result > 0)); then exit 1; fi
 
             # try drush updb
-            $result=0
+            result=0
             for i in {1..6}; 
             do
               terminus remote:drush portlandor.$CIRCLE_BRANCH -- -y updb
-              $result=$?
+              result=$?
               if [ "$result" = "0" ]; then break; fi
               sleep 10; 
             done
             if (($result > 0)); then exit 1; fi
             # try drush entup
-            $result=0
+            result=0
             for i in {1..6}; 
             do
               terminus remote:drush portlandor.$CIRCLE_BRANCH -- -y entup
-              $result=$?
+              result=$?
               if [ "$result" = "0" ]; then break; fi
               sleep 10; 
             done
             if (($result > 0)); then exit 1; fi
             # try drush cr
-            $result=0
+            result=0
             for i in {1..6}; 
             do
               terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
-              $result=$?
+              result=$?
               if [ "$result" = "0" ]; then break; fi
               sleep 10; 
             done
