POWR-503a - moved title rebuilding logic into Portland module, added custom token for Metatag, updated Metatag to use new custom token.

--- a/web/sites/default/config/metatag.metatag_defaults.global.yml
+++ b/web/sites/default/config/metatag.metatag_defaults.global.yml
@@ -9,11 +9,14 @@ label: Global
 tags:
   canonical_url: '[current-page:url]'
   description: '[node:field_summary]'
-  title: '[current-page:title] | [site:name]'
+  geo_placename: Portland
+  geo_position: 45.515012;-122.679096
+  geo_region: US-OR
+  title: '[portland:title]'
   og_description: '[node:field_summary]'
   og_site_name: '[site:name]'
-  og_title: '[current-page:title] | [site:name]'
+  og_title: '[portland:title]'
   twitter_cards_description: '[node:field_summary]'
   twitter_cards_page_url: '[current-page:url]'
-  twitter_cards_title: '[current-page:title] | [site:name]'
+  twitter_cards_title: '[portland:title]'
   twitter_cards_type: summary
