--- a/web/sites/default/config/metatag.metatag_defaults.node.yml
+++ b/web/sites/default/config/metatag.metatag_defaults.node.yml
@@ -9,10 +9,10 @@ label: Content
 tags:
   canonical_url: '[node:url]'
   description: '[node:field_summary]'
-  title: '[node:title] | [site:name]'
+  title: '[portland:title]'
   og_description: '[node:field_summary]'
   og_site_name: '[site:name]'
-  og_title: '[current-page:title] | [site:name]'
+  og_title: '[portland:title]'
   twitter_cards_description: '[node:field_summary]'
-  twitter_cards_title: '[current-page:title] | [site:name]'
+  twitter_cards_title: '[portland:title]'
   twitter_cards_type: summary
