--- a/web/sites/default/config/metatag.metatag_defaults.group__elected_official.yml
+++ b/web/sites/default/config/metatag.metatag_defaults.group__elected_official.yml
@@ -7,10 +7,10 @@ label: 'Group: Elected official'
 tags:
   canonical_url: '[current-page:url]'
   description: '[group:field_summary]'
-  title: '[current-page:title] | [site:name]'
+  title: '[portland:title]'
   og_description: '[group:field_summary]'
   og_site_name: '[site:name]'
-  og_title: '[current-page:title] | [site:name]'
+  og_title: '[portland:title]'
   twitter_cards_description: '[group:field_summary]'
-  twitter_cards_title: '[current-page:title] | [site:name]'
+  twitter_cards_title: '[portland:title]'
   twitter_cards_type: summary
