POWR-494 Ignore cloudy/node_modules

--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,7 @@ web/themes/custom/**/*.map
 # Dependencies
 web/themes/custom/particle/node_modules
 web/themes/custom/particle/vendor
+web/themes/custom/cloudy/node_modules
 
 # Generated files
 *.sass-cache/
