POWR-585 remove moderation workflow from media—didn't work; update views for consistency; fix extra space in document paragraph

--- a/web/sites/default/config/views.view.admin_group_content.yml
+++ b/web/sites/default/config/views.view.admin_group_content.yml
@@ -799,7 +799,7 @@ display:
           exposed: true
           expose:
             operator_id: type_op
-            label: 'Content type'
+            label: Type
             description: ''
             use_operator: false
             operator: type_op
@@ -842,7 +842,7 @@ display:
           exposed: true
           expose:
             operator_id: moderation_state_op
-            label: Workflow
+            label: 'Workflow state'
             description: ''
             use_operator: false
             operator: moderation_state_op
@@ -870,24 +870,24 @@ display:
             group_items: {  }
           entity_type: node
           plugin_id: moderation_state_filter
-        uid:
-          id: uid
+        uid_1:
+          id: uid_1
           table: users_field_data
           field: uid
-          relationship: field_reviewer
+          relationship: revision_uid
           group_type: group
-          admin_label: Reviewer
+          admin_label: 'Last edited by'
           operator: in
           value: {  }
           group: 1
           exposed: true
           expose:
-            operator_id: uid_op
-            label: Reviewer
+            operator_id: uid_1_op
+            label: 'Last edited by'
             description: ''
             use_operator: false
-            operator: uid_op
-            identifier: reviewer
+            operator: uid_1_op
+            identifier: editor
             required: false
             remember: false
             multiple: false
@@ -912,24 +912,24 @@ display:
           entity_type: user
           entity_field: uid
           plugin_id: user_name
-        uid_1:
-          id: uid_1
+        uid:
+          id: uid
           table: users_field_data
           field: uid
-          relationship: revision_uid
+          relationship: field_reviewer
           group_type: group
-          admin_label: 'Last edited by'
+          admin_label: Reviewer
           operator: in
           value: {  }
           group: 1
           exposed: true
           expose:
-            operator_id: uid_1_op
-            label: 'Last edited by'
+            operator_id: uid_op
+            label: Reviewer
             description: ''
             use_operator: false
-            operator: uid_1_op
-            identifier: editor
+            operator: uid_op
+            identifier: reviewer
             required: false
             remember: false
             multiple: false
