--- a/web/sites/default/config/views.view.group_media.yml
+++ b/web/sites/default/config/views.view.group_media.yml
@@ -10,9 +10,7 @@ dependencies:
     - media.type.document
     - media.type.image
     - media.type.video
-    - workflows.workflow.editorial
   module:
-    - content_moderation
     - file
     - group
     - image
@@ -646,69 +644,6 @@ display:
           entity_type: media
           entity_field: status
           plugin_id: field
-        moderation_state_1:
-          id: moderation_state_1
-          table: media_field_data
-          field: moderation_state
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: 'Workflow: latest revision'
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: content_moderation_state
-          settings: {  }
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          entity_type: media
-          plugin_id: field
         uid_1:
           id: uid_1
           table: media_field_data
@@ -1249,16 +1184,15 @@ display:
           entity_type: media
           entity_field: name
           plugin_id: string
-        moderation_state:
-          id: moderation_state
+        status:
+          id: status
           table: media_field_data
-          field: moderation_state
+          field: status
           relationship: none
           group_type: group
           admin_label: ''
-          operator: in
-          value:
-            editorial-published: editorial-published
+          operator: '='
+          value: '1'
           group: 1
           exposed: false
           expose:
@@ -1273,7 +1207,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-            reduce: false
           is_grouped: false
           group_info:
             label: ''
@@ -1287,7 +1220,8 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           entity_type: media
-          plugin_id: moderation_state_filter
+          entity_field: status
+          plugin_id: boolean
       filter_groups:
         operator: AND
         groups:
@@ -1863,6 +1797,7 @@ display:
           inline: {  }
           separator: ''
           hide_empty: false
+      enabled: true
     cache_metadata:
       max-age: -1
       contexts:
@@ -1875,7 +1810,6 @@ display:
       tags:
         - 'config:field.storage.media.field_document'
         - 'config:field.storage.media.field_summary'
-        - 'config:workflow_list'
   page_3:
     display_plugin: page
     id: page_3
@@ -1949,16 +1883,15 @@ display:
           entity_type: media
           entity_field: name
           plugin_id: string
-        moderation_state:
-          id: moderation_state
+        status:
+          id: status
           table: media_field_data
-          field: moderation_state
+          field: status
           relationship: none
           group_type: group
           admin_label: ''
-          operator: in
-          value:
-            editorial-published: editorial-published
+          operator: '='
+          value: '1'
           group: 1
           exposed: false
           expose:
@@ -1973,7 +1906,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-            reduce: false
           is_grouped: false
           group_info:
             label: ''
@@ -1987,7 +1919,8 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           entity_type: media
-          plugin_id: moderation_state_filter
+          entity_field: status
+          plugin_id: boolean
       filter_groups:
         operator: AND
         groups:
@@ -2443,8 +2376,7 @@ display:
         - url
         - url.query_args
         - user.permissions
-      tags:
-        - 'config:workflow_list'
+      tags: {  }
   page_4:
     display_plugin: page
     id: page_4
@@ -2519,16 +2451,15 @@ display:
           entity_type: media
           entity_field: name
           plugin_id: string
-        moderation_state:
-          id: moderation_state
+        status:
+          id: status
           table: media_field_data
-          field: moderation_state
+          field: status
           relationship: none
           group_type: group
           admin_label: ''
-          operator: in
-          value:
-            editorial-published: editorial-published
+          operator: '='
+          value: '1'
           group: 1
           exposed: false
           expose:
@@ -2543,7 +2474,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-            reduce: false
           is_grouped: false
           group_info:
             label: ''
@@ -2557,7 +2487,8 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           entity_type: media
-          plugin_id: moderation_state_filter
+          entity_field: status
+          plugin_id: boolean
       filter_groups:
         operator: AND
         groups:
@@ -3013,5 +2944,4 @@ display:
         - url
         - url.query_args
         - user.permissions
-      tags:
-        - 'config:workflow_list'
+      tags: {  }
