--- a/web/sites/default/config/views.view.group_members.yml
+++ b/web/sites/default/config/views.view.group_members.yml
@@ -465,7 +465,7 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          text: Edit
+          text: 'Edit membership'
           output_url_as_text: false
           absolute: false
           entity_type: group_content
@@ -566,7 +566,7 @@ display:
             title_enable: false
             title: All
           title_enable: true
-          title: '{{ arguments.gid|placeholder }} members'
+          title: 'Manage {{ arguments.gid|placeholder }} Members'
           default_argument_type: fixed
           default_argument_options:
             argument: ''
