--- a/web/sites/default/config/media.type.video.yml
+++ b/web/sites/default/config/media.type.video.yml
@@ -15,7 +15,7 @@ label: Video
 description: 'A video hosted by YouTube, Vimeo, or some other provider.'
 source: video_embed_field
 queue_thumbnail_downloads: false
-new_revision: true
+new_revision: false
 source_configuration:
   source_field: field_media_video_embed_field
 field_map: {  }
