POWR-494 Add "cloudy/vendor" in .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,7 @@ web/themes/custom/**/*.map
 web/themes/custom/particle/node_modules
 web/themes/custom/particle/vendor
 web/themes/custom/cloudy/node_modules
+web/themes/custom/cloudy/vendor
 
 # Generated files
 *.sass-cache/
