--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,7 +103,7 @@ behat_tests: &behat_tests
           # Without these lines, push will fail with "please remote git submodules" error
           rm -rf ./vendor/drupal/coder/.git && rm -rf ./web/modules/contrib/facets/.git && rm -rf ./web/modules/contrib/search_api_solr/.git
           # Compile SCSS in our custom theme
-          npm run build && cd /var/www/html
+          cd web/themes/custom/cloudy && npm run build && cd /var/www/html
           # Add all files before pushing to Pantheon
           git add -f /var/www/html
           # Pantheon site will use the wrong DB if the local is kept
