POWR-503a - modified titles for taxonomy term pages, renamed pages in page manager so they are user friendly, compensate for title being static or dynamic

--- a/web/sites/default/config/page_manager.page.taxonomy_term_guides.yml
+++ b/web/sites/default/config/page_manager.page.taxonomy_term_guides.yml
@@ -3,8 +3,8 @@ langcode: en
 status: true
 dependencies: {  }
 id: taxonomy_term_guides
-label: 'Taxonomy term - guides'
-description: 'The page shows all guides under a taxonomy term.'
+label: 'Guides'
+description: 'Taxonomy term - guides'
 use_admin_theme: false
 path: '/taxonomy/term/{taxonomy_term}/guides'
 access_logic: and
