--- a/web/sites/default/config/page_manager.page.taxonomy_term_programs.yml
+++ b/web/sites/default/config/page_manager.page.taxonomy_term_programs.yml
@@ -3,8 +3,8 @@ langcode: en
 status: true
 dependencies: {  }
 id: taxonomy_term_programs
-label: 'Taxonomy term - programs'
-description: ''
+label: 'Programs'
+description: 'Taxonomy term - programs'
 use_admin_theme: false
 path: '/taxonomy/term/{taxonomy_term}/programs'
 access_logic: and
