POWR-530 - removed infinite scroll and added full pagination to media browser views, added "number of items" filter

--- a/web/sites/default/config/views.view.media.yml
+++ b/web/sites/default/config/views.view.media.yml
@@ -14,7 +14,6 @@ dependencies:
     - image
     - media
     - user
-    - views_infinite_scroll
 _core:
   default_config_hash: '-q24ItFnGZ_VzC81AjnWyuzS-enfH7uGYBz7Pe2kLP4'
 id: media
@@ -1491,26 +1490,26 @@ display:
           content: 'There are no media items to display.'
           plugin_id: text_custom
       pager:
-        type: infinite_scroll
+        type: full
         options:
-          items_per_page: 12
+          items_per_page: 25
           offset: 0
           id: 0
           total_pages: null
           tags:
             previous: '‹ Previous'
             next: 'Next ›'
+            first: '« First'
+            last: 'Last »'
           expose:
-            items_per_page: false
+            items_per_page: true
             items_per_page_label: 'Items per page'
             items_per_page_options: '5, 10, 25, 50'
             items_per_page_options_all: false
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          views_infinite_scroll:
-            button_text: 'Load More'
-            automatically_load_content: false
+          quantity: 9
       display_description: ''
       css_class: eb-media
       arguments:
@@ -1944,26 +1943,26 @@ display:
           content: 'There are no media items to display.'
           plugin_id: text_custom
       pager:
-        type: infinite_scroll
+        type: full
         options:
-          items_per_page: 12
+          items_per_page: 25
           offset: 0
           id: 0
           total_pages: null
           tags:
             previous: '‹ Previous'
             next: 'Next ›'
+            first: '« First'
+            last: 'Last »'
           expose:
-            items_per_page: false
+            items_per_page: true
             items_per_page_label: 'Items per page'
             items_per_page_options: '5, 10, 25, 50'
             items_per_page_options_all: false
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          views_infinite_scroll:
-            button_text: 'Load More'
-            automatically_load_content: false
+          quantity: 9
       display_description: ''
       css_class: eb-media
       arguments:
@@ -2368,26 +2367,26 @@ display:
           content: 'There are no images to display.'
           plugin_id: text_custom
       pager:
-        type: infinite_scroll
+        type: full
         options:
-          items_per_page: 12
+          items_per_page: 25
           offset: 0
           id: 0
           total_pages: null
           tags:
             previous: '‹ Previous'
             next: 'Next ›'
+            first: '« First'
+            last: 'Last »'
           expose:
-            items_per_page: false
+            items_per_page: true
             items_per_page_label: 'Items per page'
             items_per_page_options: '5, 10, 25, 50'
             items_per_page_options_all: false
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          views_infinite_scroll:
-            button_text: 'Load More'
-            automatically_load_content: false
+          quantity: 9
       display_description: ''
       css_class: eb-media
       relationships:
@@ -3055,26 +3054,26 @@ display:
           content: 'There are no media items to display.'
           plugin_id: text_custom
       pager:
-        type: infinite_scroll
+        type: full
         options:
-          items_per_page: 12
+          items_per_page: 25
           offset: 0
           id: 0
           total_pages: null
           tags:
             previous: '‹ Previous'
             next: 'Next ›'
+            first: '« First'
+            last: 'Last »'
           expose:
-            items_per_page: false
+            items_per_page: true
             items_per_page_label: 'Items per page'
             items_per_page_options: '5, 10, 25, 50'
             items_per_page_options_all: false
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          views_infinite_scroll:
-            button_text: 'Load More'
-            automatically_load_content: false
+          quantity: 9
       display_description: ''
       css_class: eb-media
       arguments:
@@ -3806,26 +3805,26 @@ display:
           content: 'There are no media items to display.'
           plugin_id: text_custom
       pager:
-        type: infinite_scroll
+        type: full
         options:
-          items_per_page: 12
+          items_per_page: 25
           offset: 0
           id: 0
           total_pages: null
           tags:
             previous: '‹ Previous'
             next: 'Next ›'
+            first: '« First'
+            last: 'Last »'
           expose:
-            items_per_page: false
+            items_per_page: true
             items_per_page_label: 'Items per page'
             items_per_page_options: '5, 10, 25, 50'
             items_per_page_options_all: false
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          views_infinite_scroll:
-            button_text: 'Load More'
-            automatically_load_content: false
+          quantity: 9
       display_description: ''
       css_class: eb-media
       arguments:
@@ -4574,26 +4573,26 @@ display:
           content: 'There are no media items to display.'
           plugin_id: text_custom
       pager:
-        type: infinite_scroll
+        type: full
         options:
-          items_per_page: 12
+          items_per_page: 25
           offset: 0
           id: 0
           total_pages: null
           tags:
             previous: '‹ Previous'
             next: 'Next ›'
+            first: '« First'
+            last: 'Last »'
           expose:
-            items_per_page: false
+            items_per_page: true
             items_per_page_label: 'Items per page'
             items_per_page_options: '5, 10, 25, 50'
             items_per_page_options_all: false
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          views_infinite_scroll:
-            button_text: 'Load More'
-            automatically_load_content: false
+          quantity: 9
       display_description: ''
       css_class: eb-media
       arguments:
