POWR-585 update media library and manage group media views; remove workflow actions

--- a/web/sites/default/config/views.view.group_media.yml
+++ b/web/sites/default/config/views.view.group_media.yml
@@ -16,7 +16,6 @@ dependencies:
     - image
     - media
     - user
-    - views_bulk_operations
 id: group_media
 label: 'Group media'
 module: views
@@ -94,7 +93,6 @@ display:
             name: name
             bundle: bundle
             status: status
-            moderation_state_1: moderation_state_1
             uid_1: uid_1
             created: created
             changed: changed
@@ -139,19 +137,12 @@ display:
               empty_column: false
               responsive: priority-low
             status:
-              sortable: false
+              sortable: true
               default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
-            moderation_state_1:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: priority-low
             uid_1:
               sortable: true
               default_sort_order: asc
@@ -186,14 +177,14 @@ display:
           relationship: none
           view_mode: default
       fields:
-        views_bulk_operations_bulk_form:
-          id: views_bulk_operations_bulk_form
-          table: views
-          field: views_bulk_operations_bulk_form
+        media_bulk_form:
+          id: media_bulk_form
+          table: media
+          field: media_bulk_form
           relationship: none
           group_type: group
           admin_label: ''
-          label: ''
+          label: 'Bulk update'
           exclude: false
           alter:
             alter_text: false
@@ -226,7 +217,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: false
+          element_label_colon: true
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -234,24 +225,13 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          batch: true
-          batch_size: 10
-          form_step: true
-          buttons: false
-          clear_on_exposed: 0
           action_title: Action
+          include_exclude: include
           selected_actions:
-            'moderation_state_change:media': 'moderation_state_change:media'
-            views_bulk_operations_delete_entity: 0
-            pathauto_update_alias: 0
-            'entity:save_action:media': 0
-            'entity:unpublish_action:media': 0
-            'entity:publish_action:media': 0
-            'entity:delete_action:media': 0
-          preconfiguration:
-            'moderation_state_change:media':
-              label_override: ''
-          plugin_id: views_bulk_operations_bulk_form
+            - media_publish_action
+            - media_unpublish_action
+          entity_type: media
+          plugin_id: bulk_form
         thumbnail__target_id:
           id: thumbnail__target_id
           table: media_field_data
@@ -985,6 +965,56 @@ display:
           entity_type: media
           entity_field: bundle
           plugin_id: bundle
+        status:
+          id: status
+          table: media_field_data
+          field: status
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: ''
+            label: Published
+            description: null
+            use_operator: false
+            operator: status_op
+            identifier: status
+            required: true
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: true
+          group_info:
+            label: Published
+            description: ''
+            identifier: status
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items:
+              1:
+                title: Published
+                operator: '='
+                value: '1'
+              2:
+                title: Unpublished
+                operator: '='
+                value: '0'
+              3:
+                title: ''
+                operator: '='
+                value: ''
+          entity_type: media
+          entity_field: status
+          plugin_id: boolean
       sorts: {  }
       title: Media
       header:
