--- a/web/sites/default/config/views.view.media_library.yml
+++ b/web/sites/default/config/views.view.media_library.yml
@@ -392,14 +392,15 @@ display:
         - 'url.query_args:sort_by'
         - user.permissions
       tags:
+        - 'config:core.entity_view_display.media.document.default'
+        - 'config:core.entity_view_display.media.document.media_library'
+        - 'config:core.entity_view_display.media.image.default'
         - 'config:core.entity_view_display.media.audio.default'
         - 'config:core.entity_view_display.media.audio.embedded'
         - 'config:core.entity_view_display.media.audio.thumbnail'
-        - 'config:core.entity_view_display.media.document.default'
         - 'config:core.entity_view_display.media.document.embedded'
         - 'config:core.entity_view_display.media.document.teaser'
         - 'config:core.entity_view_display.media.document.thumbnail'
-        - 'config:core.entity_view_display.media.image.default'
         - 'config:core.entity_view_display.media.image.embedded'
         - 'config:core.entity_view_display.media.image.thumbnail'
         - 'config:core.entity_view_display.media.video.default'
@@ -436,6 +437,7 @@ display:
         - 'config:core.entity_view_display.media.audio.thumbnail'
         - 'config:core.entity_view_display.media.document.default'
         - 'config:core.entity_view_display.media.document.embedded'
+        - 'config:core.entity_view_display.media.document.media_library'
         - 'config:core.entity_view_display.media.document.teaser'
         - 'config:core.entity_view_display.media.document.thumbnail'
         - 'config:core.entity_view_display.media.image.default'
@@ -576,6 +578,7 @@ display:
         - 'config:core.entity_view_display.media.audio.thumbnail'
         - 'config:core.entity_view_display.media.document.default'
         - 'config:core.entity_view_display.media.document.embedded'
+        - 'config:core.entity_view_display.media.document.media_library'
         - 'config:core.entity_view_display.media.document.teaser'
         - 'config:core.entity_view_display.media.document.thumbnail'
         - 'config:core.entity_view_display.media.image.default'
