--- a/web/sites/default/config/views.view.media.yml
+++ b/web/sites/default/config/views.view.media.yml
@@ -193,10 +193,8 @@ display:
           empty_zero: false
           hide_alter_empty: true
           action_title: Action
-          include_exclude: include
-          selected_actions:
-            - archive_media
-            - publish_media
+          include_exclude: exclude
+          selected_actions: {  }
           entity_type: media
           plugin_id: media_bulk_form
         thumbnail__target_id:
