POWR-494-1 Restore -e flag at the end of drush commands

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,6 +150,7 @@ behat_tests: &behat_tests
               terminus remote:drush portlandor.dev -- cr
               sleep 10; 
             done
+            set -e
             # echo 'node_access_rebuild();' | $(terminus remote:drush portlandor.dev -- php-script)
             # After success deployment to DEV, remove the multidev site if this is a merge of a PR
             # Read the last Git log in the master branch. Get the branch name at the end of the log.
@@ -230,6 +231,7 @@ behat_tests: &behat_tests
               terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
               sleep 10; 
             done
+            set -e
             # echo 'node_access_rebuild();' | $(terminus drush portlandor.$CIRCLE_BRANCH -- php-script)
           fi
     - run:
