--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,6 +127,7 @@ behat_tests: &behat_tests
             do
               if [ "$i" = "12" ]; then set -e; fi
               terminus remote:drush portlandor.dev -- cim -y
+              if [ "$?" = "0" ]; then break; fi
               sleep 10; 
             done
             # try drush updb
@@ -134,6 +135,7 @@ behat_tests: &behat_tests
             do
               if [ "$i" = "12" ]; then set -e; fi
               terminus remote:drush portlandor.dev -- -y updb
+              if [ "$?" = "0" ]; then break; fi
               sleep 10; 
             done
             # try drush entup
@@ -141,6 +143,7 @@ behat_tests: &behat_tests
             do
               if [ "$i" = "12" ]; then set -e; fi
               terminus remote:drush portlandor.dev -- -y entup
+              if [ "$?" = "0" ]; then break; fi
               sleep 10; 
             done
             # try drush cr
@@ -148,6 +151,7 @@ behat_tests: &behat_tests
             do
               if [ "$i" = "12" ]; then set -e; fi
               terminus remote:drush portlandor.dev -- cr
+              if [ "$?" = "0" ]; then break; fi
               sleep 10; 
             done
             set -e
@@ -208,6 +212,7 @@ behat_tests: &behat_tests
             do
               if [ "$i" = "6" ]; then set -e; fi
               terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
+              if [ "$?" = "0" ]; then break; fi
               sleep 10; 
             done
             # try drush updb
@@ -215,6 +220,7 @@ behat_tests: &behat_tests
             do
               if [ "$i" = "6" ]; then set -e; fi
               terminus remote:drush portlandor.$CIRCLE_BRANCH -- -y updb
+              if [ "$?" = "0" ]; then break; fi
               sleep 10; 
             done
             # try drush entup
@@ -222,6 +228,7 @@ behat_tests: &behat_tests
             do
               if [ "$i" = "6" ]; then set -e; fi
               terminus remote:drush portlandor.$CIRCLE_BRANCH -- -y entup
+              if [ "$?" = "0" ]; then break; fi
               sleep 10; 
             done
             # try drush cr
@@ -229,6 +236,7 @@ behat_tests: &behat_tests
             do
               if [ "$i" = "6" ]; then set -e; fi
               terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
+              if [ "$?" = "0" ]; then break; fi
               sleep 10; 
             done
             set -e
