POWR-530 updates to media browsers for testing, added new fields and filters to images browser

--- a/web/sites/default/config/entity_browser.browser.image_table_browser.yml
+++ b/web/sites/default/config/entity_browser.browser.image_table_browser.yml
@@ -10,8 +10,8 @@ name: image_table_browser
 label: 'Image table browser'
 display: modal
 display_configuration:
-  width: '800'
-  height: '600'
+  width: ''
+  height: ''
   link_text: 'Select image'
   auto_open: false
 selection_display: no_display
